##Text encoding: utf-8

2011-10-16  Jean Bréfort  <jean@vaio>
	* libs/gccv/text.cc: more work on brackets stoichimetry coefficient support.
	* libs/gcp/brackets.cc: ditto.
	* libs/gcp/text.cc: ditto.
	* libs/gcp/window.cc: expand the contents widget.
	* plugins/paint/text/texttool.cc: more work on brackets stoichimetry
	coefficient support.

2011-10-15  Jean Bréfort  <jean@vaio>
	* libs/gcp/text.cc: some progress on brackets stoichiometry coefficient.
	* plugins/paint/text/texttool.cc: ditto.
	* plugins/paint/text/texttool.h: ditto.

2011-09-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: fixed AM_MAINTAINER_MODE usage.
	* libs/gcp/brackets.cc: attempt to add a global tag to decorative text.
	* libs/gcp/text.cc: ditto.
	* libs/gcp/text.h: ditto.

2011-08-31  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: add a text field as stoichiometry.
	* libs/gcugtk/cmd-context-gtk.cc: delete message box when done.

2011-08-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.h: API doc typo.
	* libs/gcp/brackets.cc: add a contextual menu.
	* libs/gcp/brackets.h: ditto.

2011-08-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcugtk/spectrumdoc.cc: use markup in combo box and axis title. 
	* libs/gcugtk/spectrumview.cc: add two methods to sanitize custom option
	widgets management.
	* libs/gcugtk/spectrumview.h: ditto.

2011-08-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: apply radius and color changes to the whole
	selection.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/grid.cc: enhance keyboard navigation.

2011-08-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/atomsdlg.cc: remove obsolete  "Apply to" button.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/grid.cc: enhance keyboard navigation.
	* libs/gcr/grid.h: ditto.
	* ui/crystal/atoms.ui: remove obsolete  "Apply to" button.

2011-08-23  Jean Bréfort  <jean.brefort@normalesup.org>