@@ -1,6 +1,11 @@
 ##Text encoding: utf-8
 
-2011-10-16  Jean Bréfort  <jean@vaio>
+2011-10-22  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/brackets.cc: make stoechimetry survive serialization.
+	* libs/gcp/brackets.h: ditto.
+	* libs/gcp/text.cc: ditto.
+
+2011-10-16  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gccv/text.cc: more work on brackets stoichimetry coefficient support.
 	* libs/gcp/brackets.cc: ditto.
 	* libs/gcp/text.cc: ditto.
@@ -8,7 +13,7 @@
 	* plugins/paint/text/texttool.cc: more work on brackets stoichimetry
 	coefficient support.
 
-2011-10-15  Jean Bréfort  <jean@vaio>
+2011-10-15  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gcp/text.cc: some progress on brackets stoichiometry coefficient.
 	* plugins/paint/text/texttool.cc: ditto.
 	* plugins/paint/text/texttool.h: ditto.
